@@ -10,11 +10,12 @@
 # Cause false/positives
 # shellcheck disable=SC2086
 
-set -x
-
+umask 002
 MINION_HOME="/opt/minion"
 MINION_CONFIG="/opt/minion/etc/org.opennms.minion.controller.cfg"
 MINION_OVERLAY_ETC="/opt/minion-etc-overlay"
+
+export KARAF_OPTS="-Djava.locale.providers=CLDR,COMPAT"
 
 # Error codes
 E_ILLEGAL_ARGS=126
